--- a/HDR.ipynb
+++ b/HDR.ipynb
@@ -2,37 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HanWen\\AppData\\Local\\Temp\\ipykernel_7000\\3705129500.py:17: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  self.src_img = self.src_img.astype(np.int)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g\n",
-      "m\n",
-      "mask\n",
-      "b\n"
+      "0 0\n",
+      "0 0\n",
+      "0 0\n",
+      "0 0\n",
+      "0 0\n",
+      "0 0\n",
+      "0 0\n",
+      "0 0\n",
+      "0 0\n",
+      "-1 1\n",
+      "-1 1\n",
+      "-6 -2\n",
+      "-9 -3\n",
+      "-39 9\n",
+      "-43 11\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -41,99 +33,209 @@
     "import glob\n",
     "import os\n",
     "\n",
-    "class MyImage:\n",
-    "    def __init__(self, src_img):\n",
-    "        self.src_img = src_img\n",
-    "        self.gray_img = np.zeros((self.src_img.shape[0],self.src_img.shape[1]), dtype=int)\n",
-    "        self.mtb_img  = np.zeros((self.src_img.shape[0],self.src_img.shape[1]), dtype=int)\n",
-    "        self.mask_img = np.zeros((self.src_img.shape[0],self.src_img.shape[1]), dtype=int)\n",
-    "        self.denoise_img = np.zeros((self.src_img.shape[0],self.src_img.shape[1]), dtype=int)\n",
-    "        self.med_i = 0\n",
-    "        self.threshold_i = 15\n",
-    "    \n",
-    "    def grayscale(self):\n",
-    "        self.src_img = self.src_img.astype(np.int)\n",
-    "        self.gray_img = (self.src_img[:,:,0]*19/256 + self.src_img[:,:,1]*183/256 + self.src_img[:,:,2]*54/256)\n",
-    "        self.med_i = np.median(self.gray_img)\n",
     "\n",
-    "    def mtb(self):\n",
-    "        # # convert to MTB\n",
-    "        self.mtb_img = np.where(self.gray_img > self.med_i, 255, 0)\n",
-    "    \n",
-    "    def mask(self):\n",
-    "        # # exclusion map\n",
-    "        upper_bound = self.med_i + self.threshold_i\n",
-    "        lower_bound = self.med_i - self.threshold_i\n",
-    "        self.mask_img[self.gray_img < lower_bound] = 255\n",
-    "        self.mask_img[self.gray_img > upper_bound] = 255\n",
-    "     \n",
-    "    def bind_mtb_mask(self):\n",
-    "        # bind mask_img and mtb_img\n",
-    "        self.denoise_img = np.bitwise_and(self.mtb_img, self.mask_img)\n",
+    "def Convert_Image(src_img, threshold_i=15):\n",
+    "    gray_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
+    "    mtb_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
+    "    mask_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
+    "    denoise_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
     "\n",
-    "    def convert_image(self):\n",
-    "        self.grayscale()\n",
-    "        self.mtb()\n",
-    "        self.mask()\n",
-    "        self.bind_mtb_mask()\n",
+    "    # convert to grayscale\n",
+    "    temp_img = src_img.astype(np.int32)    # prevent overflow\n",
+    "    gray_img = (temp_img[:, :, 0]*19/256 + temp_img[:, :, 1]\n",
+    "                * 183/256 + temp_img[:, :, 2]*54/256)     # BGR\n",
+    "    med_i = np.median(gray_img)\n",
+    "\n",
+    "    # convert to MTB\n",
+    "    mtb_img = np.where(gray_img > med_i, 255, 0)\n",
+    "\n",
+    "    # exclusion map\n",
+    "    upper_bound = med_i + threshold_i\n",
+    "    lower_bound = med_i - threshold_i\n",
+    "    mask_img[gray_img < lower_bound] = 255\n",
+    "    mask_img[gray_img > upper_bound] = 255\n",
+    "\n",
+    "    # bind mask_img and mtb_img\n",
+    "    denoise_img = np.bitwise_and(mtb_img, mask_img)\n",
+    "    \n",
+    "    \n",
+    "    return denoise_img\n",
+    "\n",
+    "# shift tar to find current best dx, dy in 9 pixels\n",
+    "def Shift_Image(src, tar, last_dx, last_dy):\n",
+    "    # convert to grayscale first (denoise_img)\n",
+    "    src_dimg = Convert_Image(src)\n",
+    "    tar_dimg = Convert_Image(tar)\n",
+    "\n",
+    "    # shift last dx,dy\n",
+    "    h, w = src_dimg.shape[:2]\n",
+    "    min = h * w\n",
+    "    M = np.float32([[1, 0, last_dx*2], [0, 1, last_dy*2]])\n",
+    "    src_dimg = src_dimg.astype(np.uint8)\n",
+    "    tar_dimg = tar_dimg.astype(np.uint8)\n",
+    "    new_tar = cv2.warpAffine(tar_dimg, M, (w, h))\n",
+    "\n",
+    "    # then find current best dx, dy\n",
+    "    for x in range(-1,2):\n",
+    "        for y in range(-1,2):\n",
+    "            M = np.float32([[1, 0, x], [0, 1, y]])        # M為平移矩陣,x為寬移動的距離,y為高\n",
+    "            tmp_tar = cv2.warpAffine(new_tar, M, (w, h))  # 仿射變換函式   (w, h):平移後圖像的大小\n",
+    "            z = np.sum(np.logical_xor(src_dimg, tmp_tar) == 1)\n",
+    "            if z < min:\n",
+    "                min = z\n",
+    "                dx = x\n",
+    "                dy = y\n",
+    "\n",
+    "    # image * 2, so shift * 2\n",
+    "    return dx + last_dx*2, dy + last_dy*2\n",
+    "\n",
+    "# input RGB image src, tar    num = scale 1/2 times\n",
+    "def Image_Alignment(src, tar, num):\n",
+    "    if num == 0:\n",
+    "        dx, dy = Shift_Image(src, tar, 0, 0)\n",
+    "    else:\n",
+    "        h, w = src.shape[:2]\n",
+    "        h_src = cv2.resize(src, (h//2,w//2))\n",
+    "        h_tar = cv2.resize(tar, (h//2,w//2))\n",
+    "        last_dx, last_dy = Image_Alignment(h_src, h_tar, num-1)\n",
+    "        dx, dy = Shift_Image(src, tar, last_dx, last_dy)\n",
+    "\n",
+    "    return dx, dy  \n",
+    "\n",
+    "\n",
+    "# test\n",
+    "# a = cv2.imread('data/my_1.jpg')\n",
+    "# b = cv2.imread('data/my_2.jpg')\n",
+    "\n",
+    "# d_x, d_y = Image_Alignment(a, b, 5)\n",
+    "\n",
+    "# print(d_x,d_y)\n",
+    "\n",
+    "# h, w = b.shape[:2]\n",
+    "# M = np.float32([[1, 0, d_x], [0, 1, d_y]])    # M為平移矩陣,x為寬移動的距離,y為高\n",
+    "# tmp_tar = cv2.warpAffine(b, M, (w, h))        # 仿射變換函式   (w, h):平移後圖像的大小\n",
+    "\n",
+    "# cv2.imwrite('shift_img.jpg', tmp_tar)\n",
+    "\n",
+    "\n",
+    "# main()\n",
     "\n",
     "# Read file\n",
-    "\n",
-    "\n",
     "imgspath = glob.glob(os.path.join('data','*.png'))\n",
     "imgs = [cv2.imread(i) for i in imgspath]\n",
+    "All_Img = []\n",
     "\n",
-    "for i,ele in enumerate(imgs):\n",
-    "    myimage = MyImage(ele)\n",
-    "    myimage.convert_image()\n",
-    "    cv2.imwrite(os.path.join('output', f'img{i}.jpg'), myimage.denoise_img)\n",
-    "    \n",
+    "source_image = imgs[0]\n",
+    "for i,ele in enumerate(imgs[1:]):\n",
+    "    d_x, d_y = Image_Alignment(source_image, ele, 5)\n",
+    "    print(d_x,d_y)\n",
     "\n",
-    "img = cv2.imread('data/memorial0061.png')\n",
-    "myimage = MyImage(img)\n",
-    "myimage.grayscale()\n",
-    "print('g')\n",
-    "myimage.mtb()\n",
-    "print('m')\n",
-    "myimage.mask()\n",
-    "print('mask')\n",
-    "myimage.bind_mtb_mask()\n",
-    "print('b')\n",
+    "    h, w = ele.shape[:2]\n",
+    "    M = np.float32([[1, 0, d_x], [0, 1, d_y]])\n",
+    "    after_shift_ele = cv2.warpAffine(ele, M, (w, h))    \n",
     "\n",
-    "# myimage.convert_image()\n",
-    "cv2.imwrite('img.jpg', myimage.denoise_img)\n"
+    "    cv2.imwrite(os.path.join('output_test', f'img{i}.png'), after_shift_ele)\n",
+    "\n",
+    "\n",
+    "# cv2.imwrite('temp.jpg', source_image)\n",
+    "# cv2.imwrite(os.path.join('output', f'img{i}.jpg'), myimage.denoise_img)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"method-wrapper\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\HanWen\\Desktop\\working\\HDR\\myHDR\\HDR.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HanWen/Desktop/working/HDR/myHDR/HDR.ipynb#ch0000004?line=4'>5</a>\u001b[0m myimage \u001b[39m=\u001b[39m MyImage(n)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HanWen/Desktop/working/HDR/myHDR/HDR.ipynb#ch0000004?line=5'>6</a>\u001b[0m \u001b[39m# myimage.convert_image()\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/HanWen/Desktop/working/HDR/myHDR/HDR.ipynb#ch0000004?line=6'>7</a>\u001b[0m cv2\u001b[39m.\u001b[39mimwrite(\u001b[39m'\u001b[39;49m\u001b[39mde\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49mi\u001b[39m.\u001b[39;49m\u001b[39m__str__\u001b[39;49m\u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.png\u001b[39m\u001b[39m'\u001b[39m, n)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HanWen/Desktop/working/HDR/myHDR/HDR.ipynb#ch0000004?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mfinish\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m img)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HanWen/Desktop/working/HDR/myHDR/HDR.ipynb#ch0000004?line=8'>9</a>\u001b[0m i\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"method-wrapper\") to str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv_img = []\n",
-    "i = 0\n",
-    "for img in glob.glob(\"data/*.png\"):\n",
-    "    n = cv2.imread(img)\n",
-    "    myimage = MyImage(n)\n",
-    "    # myimage.convert_image()\n",
-    "    cv2.imwrite('de' +i.__str__+ '.png', n)\n",
-    "    print('finish' + img)\n",
-    "    i+=1\n",
-    "    #cv_img.append(myimage)\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "def Convert_Image(src_img, threshold_i=15):\n",
+    "    gray_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
+    "    mtb_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
+    "    mask_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
+    "    denoise_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
+    "\n",
+    "    # convert to grayscale\n",
+    "    temp_img = src_img.astype(np.int32)    # prevent overflow\n",
+    "    gray_img = (temp_img[:, :, 0]*19/256 + temp_img[:, :, 1]\n",
+    "                * 183/256 + temp_img[:, :, 2]*54/256)     # BGR\n",
+    "    med_i = np.median(gray_img)\n",
+    "\n",
+    "    # convert to MTB\n",
+    "    mtb_img = np.where(gray_img > med_i, 255, 0)\n",
+    "\n",
+    "    # exclusion map\n",
+    "    upper_bound = med_i + threshold_i\n",
+    "    lower_bound = med_i - threshold_i\n",
+    "    mask_img[gray_img < lower_bound] = 255\n",
+    "    mask_img[gray_img > upper_bound] = 255\n",
+    "\n",
+    "    # bind mask_img and mtb_img\n",
+    "    denoise_img = np.bitwise_and(mtb_img, mask_img)\n",
     "    \n",
-    "#print(cv_img) "
+    "    \n",
+    "    return denoise_img\n",
+    "\n",
+    "# shift tar to find current best dx, dy in 9 pixels\n",
+    "def Shift_Image(src, tar, last_dx, last_dy):\n",
+    "    # convert to grayscale first (denoise_img)\n",
+    "    src_dimg = Convert_Image(src)\n",
+    "    tar_dimg = Convert_Image(tar)\n",
+    "\n",
+    "    # shift last dx,dy\n",
+    "    h, w = src_dimg.shape[:2]\n",
+    "    min = h * w\n",
+    "    M = np.float32([[1, 0, last_dx*2], [0, 1, last_dy*2]])\n",
+    "    src_dimg = src_dimg.astype(np.uint8)\n",
+    "    tar_dimg = tar_dimg.astype(np.uint8)\n",
+    "    new_tar = cv2.warpAffine(tar_dimg, M, (w, h))\n",
+    "\n",
+    "    # then find current best dx, dy\n",
+    "    for x in range(-1,2):\n",
+    "        for y in range(-1,2):\n",
+    "            M = np.float32([[1, 0, x], [0, 1, y]])        # M為平移矩陣,x為寬移動的距離,y為高\n",
+    "            tmp_tar = cv2.warpAffine(new_tar, M, (w, h))  # 仿射變換函式   (w, h):平移後圖像的大小\n",
+    "            z = np.sum(np.logical_xor(src_dimg, tmp_tar) == 1)\n",
+    "            if z < min:\n",
+    "                min = z\n",
+    "                dx = x\n",
+    "                dy = y\n",
+    "\n",
+    "    # image * 2, so shift * 2\n",
+    "    return dx + last_dx*2, dy + last_dy*2\n",
+    "\n",
+    "# input RGB image src, tar    num = scale 1/2 times\n",
+    "def Image_Alignment(src, tar, num):\n",
+    "    if num == 0:\n",
+    "        dx, dy = Shift_Image(src, tar, 0, 0)\n",
+    "    else:\n",
+    "        h, w = src.shape[:2]\n",
+    "        h_src = cv2.resize(src, (h//2,w//2))\n",
+    "        h_tar = cv2.resize(tar, (h//2,w//2))\n",
+    "        last_dx, last_dy = Image_Alignment(h_src, h_tar, num-1)\n",
+    "        dx, dy = Shift_Image(src, tar, last_dx, last_dy)\n",
+    "\n",
+    "    return dx, dy  \n",
+    "\n",
+    "\n",
+    "imgspath = glob.glob(os.path.join('data','*.png'))\n",
+    "imgs = [cv2.imread(i) for i in imgspath]\n",
+    "All_Img = []\n",
+    "\n",
+    "# source_image = imgs[0]\n",
+    "for i,ele in enumerate(imgs[0:]):\n",
+    "    outpu = Convert_Image(ele)\n",
+    "    # print(d_x,d_y)\n",
+    "\n",
+    "    # h, w = ele.shape[:2]\n",
+    "    # M = np.float32([[1, 0, d_x], [0, 1, d_y]])\n",
+    "    # after_shift_ele = cv2.warpAffine(ele, M, (w, h))    \n",
+    "\n",
+    "    cv2.imwrite(os.path.join('output_mask', f'img{i}.png'), outpu)"
    ]
   },
   {
