0320 finish image alignment but there's a little bug when image is dark

--- a/Image_Alignment.ipynb
+++ b/Image_Alignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,16 +226,16 @@
     "imgs = [cv2.imread(i) for i in imgspath]\n",
     "All_Img = []\n",
     "\n",
-    "# source_image = imgs[0]\n",
-    "for i,ele in enumerate(imgs[0:]):\n",
-    "    outpu = Convert_Image(ele)\n",
-    "    # print(d_x,d_y)\n",
+    "source_image = imgs[0]\n",
+    "for i,ele in enumerate(imgs[11:]):\n",
+    "    d_x, d_y = Image_Alignment(source_image, ele, 5)\n",
+    "    print(d_x,d_y)\n",
     "\n",
-    "    # h, w = ele.shape[:2]\n",
-    "    # M = np.float32([[1, 0, d_x], [0, 1, d_y]])\n",
-    "    # after_shift_ele = cv2.warpAffine(ele, M, (w, h))    \n",
+    "    h, w = ele.shape[:2]\n",
+    "    M = np.float32([[1, 0, d_x], [0, 1, d_y]])\n",
+    "    after_shift_ele = cv2.warpAffine(ele, M, (w, h))    \n",
     "\n",
-    "    cv2.imwrite(os.path.join('output_mask', f'img{i}.png'), outpu)"
+    "    cv2.imwrite(os.path.join('output_test', f'img{i}.png'), after_shift_ele)"
    ]
   },
   {
