0322 nothing changing, I'm still the same.

--- a/Image_Alignment.ipynb
+++ b/Image_Alignment.ipynb
@@ -2,28 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "-1 1\n",
-      "-1 1\n",
-      "-6 -2\n",
-      "-9 -3\n",
-      "-39 9\n",
-      "-43 11\n"
+      "3 -1\n",
+      "-1 -1\n",
+      "5 2\n",
+      "5 2\n",
+      "43 -11\n",
+      "43 -9\n",
+      "43 -11\n",
+      "43 -7\n"
      ]
     }
    ],
@@ -33,17 +26,16 @@
     "import glob\n",
     "import os\n",
     "\n",
-    "\n",
-    "def Convert_Image(src_img, threshold_i=15):\n",
+    "# threshold <= 10 has better result, 15 has bad result\n",
+    "def Convert_Image(src_img, threshold_i=5):\n",
     "    gray_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
     "    mtb_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
     "    mask_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
     "    denoise_img = np.zeros((src_img.shape[0], src_img.shape[1]), dtype=np.uint8)\n",
     "\n",
     "    # convert to grayscale\n",
-    "    temp_img = src_img.astype(np.int32)    # prevent overflow\n",
-    "    gray_img = (temp_img[:, :, 0]*19/256 + temp_img[:, :, 1]\n",
-    "                * 183/256 + temp_img[:, :, 2]*54/256)     # BGR\n",
+    "    temp_img = src_img.astype(np.uint32)    # prevent overflow\n",
+    "    gray_img = (temp_img[:,:,0]*19/256 + temp_img[:,:,1]*183/256 + temp_img[:,:,2]*54/256)     # BGR\n",
     "    med_i = np.median(gray_img)\n",
     "\n",
     "    # convert to MTB\n",
@@ -56,7 +48,7 @@
     "    mask_img[gray_img > upper_bound] = 255\n",
     "\n",
     "    # bind mask_img and mtb_img\n",
-    "    denoise_img = np.bitwise_and(mtb_img, mask_img)\n",
+    "    denoise_img = np.logical_and(mtb_img, mask_img)\n",
     "    \n",
     "    \n",
     "    return denoise_img\n",
@@ -104,8 +96,8 @@
     "\n",
     "\n",
     "# test\n",
-    "# a = cv2.imread('data/my_1.jpg')\n",
-    "# b = cv2.imread('data/my_2.jpg')\n",
+    "# a = cv2.imread('my_data/my_1.jpg')\n",
+    "# b = cv2.imread('my_data/my_2.jpg')\n",
     "\n",
     "# d_x, d_y = Image_Alignment(a, b, 5)\n",
     "\n",
@@ -115,13 +107,15 @@
     "# M = np.float32([[1, 0, d_x], [0, 1, d_y]])    # M為平移矩陣,x為寬移動的距離,y為高\n",
     "# tmp_tar = cv2.warpAffine(b, M, (w, h))        # 仿射變換函式   (w, h):平移後圖像的大小\n",
     "\n",
-    "# cv2.imwrite('shift_img.jpg', tmp_tar)\n",
+    "# cv2.imwrite(os.path.join('my_output','shift_img.jpg'), tmp_tar)\n",
     "\n",
     "\n",
     "# main()\n",
     "\n",
     "# Read file\n",
-    "imgspath = glob.glob(os.path.join('data','*.png'))\n",
+    "# imgspath = glob.glob(os.path.join('memorial','*.png'))\n",
+    "# imgspath = glob.glob(os.path.join('hdr_pic/house','*.jpg'))\n",
+    "imgspath = glob.glob(os.path.join('hdr_pic/library','*.jpg'))\n",
     "imgs = [cv2.imread(i) for i in imgspath]\n",
     "All_Img = []\n",
     "\n",
@@ -134,18 +128,28 @@
     "    M = np.float32([[1, 0, d_x], [0, 1, d_y]])\n",
     "    after_shift_ele = cv2.warpAffine(ele, M, (w, h))    \n",
     "\n",
-    "    cv2.imwrite(os.path.join('output_test', f'img{i}.png'), after_shift_ele)\n",
-    "\n",
-    "\n",
-    "# cv2.imwrite('temp.jpg', source_image)\n",
-    "# cv2.imwrite(os.path.join('output', f'img{i}.jpg'), myimage.denoise_img)\n"
+    "    # cv2.imwrite(os.path.join('memorial_output', f'img{i}.png'), after_shift_ele)\n",
+    "    # cv2.imwrite(os.path.join('hdr_pic_output/house', f'img{i}.jpg'), after_shift_ele)\n",
+    "    cv2.imwrite(os.path.join('hdr_pic_output/library', f'img{i}.jpg'), after_shift_ele)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1 1\n",
+      "-6 -2\n",
+      "-9 -3\n",
+      "-39 9\n",
+      "-43 11\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
